--- a/app/src/main/res/layout/activity_add_cup_board.xml
+++ b/app/src/main/res/layout/activity_add_cup_board.xml
@@ -15,7 +15,6 @@ android:orientation="vertical">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/item_name"
         android:textSize="18sp" />
 
     <TextView
@@ -24,8 +23,7 @@ android:orientation="vertical">
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        tools:text="@string/states" />
+        android:textSize="18sp" />
 
 </LinearLayout>
 </LinearLayout>
