--- a/app/src/main/res/layout/activity_task_baclog.xml
+++ b/app/src/main/res/layout/activity_task_baclog.xml
@@ -8,62 +8,72 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/peo_icon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="left|center_vertical"
-            android:layout_margin="6dp"
-            android:layout_marginBottom="6dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            app:srcCompat="@drawable/avatar" /><![CDATA[
-            android:layout_marginTop="6dp"
-            android:contentDescription="Avatar" />
-
-        ]]>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="vertical"
-            android:padding="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp">
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="fill_parent"
-                android:layout_height="26sp"
-                android:ellipsize="marquee"
-                android:singleLine="true"
-                android:text="@string/user_name"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/peo_icon"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="top|left"
+                android:layout_margin="6dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                app:srcCompat="@drawable/avatar" /><![CDATA[
+                android:layout_marginTop="6dp"
+                android:contentDescription="Avatar" />
 
-            <TextView
-                android:id="@+id/user_email"
-                android:layout_width="fill_parent"
+            ]]>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:text="@string/email"
-                android:textSize="14sp"
-                android:textStyle="italic" />
+                android:layout_gravity="top|center_vertical|fill_horizontal|center"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="vertical"
+                android:padding="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="fill_parent"
+                    android:layout_height="26sp"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
+                    android:text="@string/user_name"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/user_email"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:text="@string/email"
+                    android:textSize="14sp"
+                    android:textStyle="italic" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <ListView
             android:id="@+id/myTask"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="5dp"
+            tools:layout_editor_absoluteY="50dp" />
 
     </LinearLayout>
 
