--- a/app/src/main/res/layout/activity_task_baclog.xml
+++ b/app/src/main/res/layout/activity_task_baclog.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/main_wallpaper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.TaskBaclogActivity">
