--- a/app/src/main/res/layout/chorelayout.xml
+++ b/app/src/main/res/layout/chorelayout.xml
@@ -41,6 +41,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/states" />
+
+                <TextView
+                    android:id="@+id/task_due"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/duetime" />
             </LinearLayout>
 
             <Button
